--- a/login.html
+++ b/login.html
@@ -55,8 +55,8 @@
                     <button type="submit" class="btn btn-primary">
                         Entrar
                     </button>
-                    <button id="limpiar" class="btn btn-danger">
-                        Limpiar
+                    <button id="registro" class="btn btn-danger">
+                        Registro
                     </button>
                 </div>
             </form>
