--- a/register.html
+++ b/register.html
@@ -54,9 +54,9 @@
                 <div id="botones">
                     <button type="submit" class="btn btn-primary">
                         Registrar
-                    </button>
-                    <button id="limpiarForm" class="btn btn-danger">
-                        Limpiar
+                    </button>   
+                    <button id="regresar" class="btn btn-danger">
+                        Regresar
                     </button>
                 </div>
             </form>
